--- a/_posts/notes/other/2022-03-28-sources.md
+++ b/_posts/notes/other/2022-03-28-sources.md
@@ -1,30 +1,29 @@
 ---
 layout: post
 title: 'Notes | Sources'
-date: 2022-03-28
 permalink: /notes/other/sources/
 ---
 
-# [](#header-4)Databases
+# Databases
 - [Exploitdb](https://www.exploit-db.com/)
 - [API Searcher](https://www.programmableweb.com/apis/directory)
 - [CVE Searcher](https://cve.mitre.org/)
 - [GitHub Searcher](https://awesomeopensource.com/)
 
-# [](#header-4)Crypto
+# Crypto
 - [CyberChef](https://icyberchef.com/)
 - [Soumya decoder](https://decode.soumya.dev/)
 - [DCode](https://www.dcode.fr/en)
 
-# [](#header-4)OSINT
+# OSINT
 - [OSINT Framework](https://osintframework.com/)
 - [Domaintools](https://www.domaintools.com/)
 
-# [](#header-4)Dorks
+# Dorks
 - [Search operators](https://drive.google.com/file/d/1GIfRKE0ctkOoqnc2lwGzYu5rh88T4hs8/view) (spanish)
 - [Shodan](https://www.shodan.io/)
 
-# [](#header-4)Info
+# Info
 - [SecTools](https://sectools.org/)
 - [Explain shel](https://explainshell.com/)
 - [Privacy Guides](https://privacyguides.org/)
@@ -35,12 +34,12 @@ permalink: /notes/other/sources/
 - [TheHackerRecipes](https://www.thehacker.recipes/)
 - [samsclass](https://samsclass.info/127/ED_2020.shtml)
 
-# [](#header-4)Resources
+# Resources
 - [VirusTotal](https://www.virustotal.com/gui/home/upload)
 - [WADComs](https://wadcoms.github.io/)
 - [Have I been pwned](https://haveibeenpwned.com/)
 
-# [](#header-4)CTF
+# CTF
 - [CTFlearn](https://ctflearn.com/)
 - [Hack The Box](https://www.hackthebox.com/)
 - [Root Me](https://www.root-me.org/)
@@ -52,20 +51,20 @@ permalink: /notes/other/sources/
 - [Juice Shop](https://github.com/juice-shop/juice-shop)
 - [CTF Challenge](https://ctfchallenge.com/)
 
-# [](#header-4)Bug Bounty Hunter
+# Bug Bounty Hunter
 - [HackerOne](https://www.hackerone.com/)
 - [BugCrowd](https://bugcrowd.com/programs)
 - [Intigriti](https://www.intigriti.com/)
 - [Google](https://bughunters.google.com/)
 
-# [](#header-4)News
+# News
 - [DanielMiessler](https://danielmiessler.com/)
 - [TheHackerNews](https://thehackernews.com/)
 - [Wired](https://www.wired.com/category/security/)
 - [Securib](https://securib.ee/)
 
 
-# [](#header-4)Hmmm...
+# Hmmm...
 - [Ransomwiki](https://darkfeed.io/ransomwiki/)
 - [vx underground](https://www.vx-underground.org/)
 - [ContiNews ](https://continewsnv5otx5kaoje7krkto2qbu3gtqef22mnr7eaxw3y6ncz3ad.onion.ly/)
