--- a/_posts/notes/system/2022-04-24-ssh.md
+++ b/_posts/notes/system/2022-04-24-ssh.md
@@ -4,17 +4,17 @@ title: 'Notes | SSH'
 permalink: /notes/system/ssh/
 ---
 
-# [](#header-4)Basic Access
+# Basic Access
 We can try login using the **anonymous** user by default (with no password):
-{% highlight plain %}
+{% highlight bash %}
 > ssh anonymous@ip
     Enter password:
 anonymous@ip#  
 {% endhighlight %}
 
-# [](#header-4)RSA file
+# RSA file
 If we manage to get the rsa file we can connect with:
-{% highlight plain %}
+{% highlight bash %}
 > chmod 600 id_rsa
 > ssh -i id_rsa user@ip
 {% endhighlight %}
