--- a/_posts/notes/tools/2022-01-24-nmap.md
+++ b/_posts/notes/tools/2022-01-24-nmap.md
@@ -1,22 +1,19 @@
 ---
 layout: post
 title: 'Notes | Nmap'
-date: 2022-01-24
 permalink: /notes/tools/nmap/
 ---
 
-# [](#header-4)Basic
-
+# Basic
 - **-sS** do a stealth scan with TCP SYN
 - **-Pn** do not use ping
 - **-oN** export the scan in a file
 
 
-# [](#header-4)Windows
-
+# Windows
 Because of many Windows machines slower the enumeration we can modify the scan:
-{% highlight plain %}
-nmap --min-rate 500 --open -vvv 192.168.0.1 -oN file
+{% highlight bash %}
+> nmap --min-rate 500 --open -vvv 192.168.0.1 -oN file
 {% endhighlight %}
 
 Let's see each one:
