--- a/_posts/notes/tools/2022-04-24-web.md
+++ b/_posts/notes/tools/2022-04-24-web.md
@@ -1,27 +1,26 @@
 ---
 layout: post
 title: 'Notes | Web Tools'
-date: 2022-04-24
 permalink: /notes/tools/web/
 ---
 
-# [](#header-4)fuzzer
+# fuzzer
 
-# [](#header-4)dirb
+# dirb
 To get hidden files.
-{% highlight plain %}
+{% highlight bash %}
 > dirb [domain]
 {% endhighlight %}
 
-# [](#header-4)crunch
+# crunch
 To generate dictionaries:
-{% highlight plain %}
+{% highlight bash %}
 > crunch <min> <max> [options]
 {% endhighlight %}
 
-# [](#header-4)weevely
+# weevely
 To generate a shell:
-{% highlight plain %}
+{% highlight bash %}
 > weevely generate [password] /home/kali/shell.php
 > weevely http://ip/shell.php [password]
 {% endhighlight %}
