--- a/_posts/notes/web/2021-12-27-dorks.md
+++ b/_posts/notes/web/2021-12-27-dorks.md
@@ -1,12 +1,11 @@
 ---
 layout: post
 title: 'Notes | Dorks'
-date: 2021-12-27
 permalink: /notes/web/dorks/
 ---
 
 
-# [](#header-4)Google
+# Google
 
 - **" "** with this we search for exact words
 - **site:** search pages, with **-sites:** excluded pages. Can be direct pages (twitter.com) or domains (com)
@@ -17,12 +16,12 @@ permalink: /notes/web/dorks/
 - **intitle:** search in the title (url)
 
 Some examples can be:
-{% highlight plain %}
+{% highlight mysql %}
 "you have an error in your sql syntax" inurl:/events.php?id=
 {% endhighlight %}
 This search for sites that can be vulnurable to injections
 
-# [](#header-4)Bing
+# Bing
 
 - **feed:** search a string
 - **ip:** search by ip
@@ -32,13 +31,13 @@ This search for sites that can be vulnurable to injections
 - **domain:**
 - **loc:** location (uk)
 
-# [](#header-4)Shodan
+# Shodan
 
 - **city:**
 - **country:**
 - **product:** MySQL
 
-# [](#header-4)Some tools
+# Some tools
 
 - foca (windows)
 - snitch (python)
@@ -46,9 +45,9 @@ This search for sites that can be vulnurable to injections
 - bingoo (linux)
 - exiftool (to check metadata)
 
-# [](#header-4)Examples
+# Examples
 
-## [](#header-4)WSO2 RCE exploit 
+## WSO2 RCE exploit 
 - inurl:"/carbon/admin/login.jsp"
 - inurl:"/authenticationendpoint/login.do"
 - inurl:"devportal/apis"
