--- a/_posts/notes/web/2022-04-24-csrf-ssrf.md
+++ b/_posts/notes/web/2022-04-24-csrf-ssrf.md
@@ -1,17 +1,18 @@
 ---
 layout: post
 title: 'Notes | CSRF and SSRF'
-date: 2022-04-24
 permalink: /notes/web/csrf-ssrf/
 ---
 
-# [](#header-4)CSRF
+# CSRF
 **CSRF** is an attack that forces an end user to execute unwanted actions on a web application in which they're currently authenticated.
 
 We can test it with **Burp**. First we need to find a request to the server with **POST**. Send that to the intercept from Burp, and then to the intruder.
 You should be able to see te request, right-click and change the method (from POST to GET). If you get an url with the form, you have found the CSRF.
 
-# [](#header-4)SSRF
+---
+
+# SSRF
 In a **SSRF** the attacker can abuse functionality on the server to read or update internal resources.
 
 First we need to find a place were the webpage is printing a file from the server. If we can manipulate that data we can enumarete the machine.
