--- a/_posts/notes/web/2022-04-25-poa.md
+++ b/_posts/notes/web/2022-04-25-poa.md
@@ -6,21 +6,21 @@ permalink: /notes/web/poa/
 
 A padding oracle attack is an attack which uses the padding validation of a cryptographic message to decrypt the ciphertext.
 
-# [](#header-4)Padbuster
+# Padbuster
 A padding oracle attack is an attack which uses the padding validation of a cryptographic message to decrypt the ciphertext.
 
 We can use **padbuster** to decode a cookie and try to do a cookie hijacking:
-{% highlight plain %}
+{% highlight bash %}
 > padbuster [url] 8 -cookie "auth=[cookie]" -encoding 0
 {% endhighlight %}
 
 If it is vulnerable, we can encrypt new cookies. For example if the output is 'user=youruser' we can try:
-{% highlight plain %}
+{% highlight bash %}
 > padbuster [url] 8 -cookie "auth=[cookie]" -encoding 0 -plaintext "user=admin"
 {% endhighlight %}
 
 Another way to recretate this if we can register a new user and login, we can create a user like **admin=**. This will create an user with the same privilegies as the user admin.
 
-# [](#header-4)Bit Flipper Attack / BurpSuite
+# Bit Flipper Attack / BurpSuite
 Another way is to register a new user like **bdmin**. Send the request to the **Intruder**.
 Then we can use the following payload: *type: Bit flipper, Format of original data: Literal value, URL encode: disable*
