--- a/_posts/notes/tools/2022-01-24-nmap.md
+++ b/_posts/notes/tools/2022-01-24-nmap.md
@@ -5,9 +5,17 @@ permalink: /notes/tools/nmap/
 ---
 
 # Basic
-- **-sS** do a stealth scan with TCP SYN
-- **-Pn** do not use ping
-- **-oN** export the scan in a file
+The more common options are:
+- **-sS**: do a stealth scan with TCP SYN
+- **-sU**: UDP scan
+- **-O**: detect the OS
+- **-sV**: provides services version
+- **-v** and **-vv**: increase the verbosity
+- **-Pn**: do not use ping
+- **-oN**: export the scan in a file
+- **-oA**: export the scan three major formats
+- **-A**: aggresive scan
+- **-p-**: scan **all** the ports
 
 
 # Windows
