--- a/_posts/notes/tools/2022-04-24-commands.md
+++ b/_posts/notes/tools/2022-04-24-commands.md
@@ -17,3 +17,6 @@ To get hidden files.
 # Ngrok
 To create open http servers outside the LAN.
 [Link](https://ngrok.com/)
+
+# gobuster
+Wordlist: **/usr/share/wordlist/dirb/**
