--- a/_posts/notes/other/2022-03-28-sources.md
+++ b/_posts/notes/other/2022-03-28-sources.md
@@ -38,6 +38,8 @@ permalink: /notes/other/sources/
 - [VirusTotal](https://www.virustotal.com/gui/home/upload)
 - [WADComs](https://wadcoms.github.io/)
 - [Have I been pwned](https://haveibeenpwned.com/)
+- [Reverse Shell](https://www.revshells.com/)
+- [GTFObins](https://gtfobins.github.io/)
 
 # CTF
 - [CTFlearn](https://ctflearn.com/)
