--- a/_posts/notes/databases/2021-12-12-sqli.md
+++ b/_posts/notes/databases/2021-12-12-sqli.md
@@ -174,3 +174,8 @@ We can try searching a URL with:
 We can use the following options to get a reverse shell:
 - **--os-shell**
 - **--sql-shell**
+
+With **Burp** we can capture the request and do the scan with a file with the header:
+{% highlight bash %}
+> sqlmap -r req.txt
+{% endhighlight %}
