--- a/_posts/notes/tools/2022-04-24-commands.md
+++ b/_posts/notes/tools/2022-04-24-commands.md
@@ -20,3 +20,6 @@ To create open http servers outside the LAN.
 
 # gobuster
 Wordlist: **/usr/share/wordlist/dirb/**
+
+# wpscan
+To scan for Wordpress vulnerabilities.
