--- a/_posts/notes/tools/2021-12-27-dorks.md
+++ b/_posts/notes/tools/2021-12-27-dorks.md
@@ -2,7 +2,7 @@
 title: Notes | Dorks
 author: Zeropio
 date: 2021-12-27
-categories: [Notes, Web]
+categories: [Notes, Tools]
 tags: [dorks]
 permalink: /notes/web/dorks
 ---
