--- a/_posts/notes/tools/2022-04-24-commands.md
+++ b/_posts/notes/tools/2022-04-24-commands.md
@@ -7,25 +7,42 @@ tags: [tool]
 permalink: /notes/tools/commands
 ---
 
-# fuzzer
-
-# dirb
-To get hidden files.
-```console
-$ dirb [domain]
-```
-
 # hash-identifier
+
+---
 
 # Ngrok
 To create open http servers outside the LAN.
 [Link](https://ngrok.com/)
 
+---
+
 # gobuster
 Wordlist: **/usr/share/wordlist/dirb/**
+
+---
 
 # wpscan
 To scan for Wordpress vulnerabilities.
 
+---
+
 # ngrok
 To host a web.
+
+---
+
+# cURL
+Curl can be use to send a basic http request to any URL.
+```console
+zero@pio$ curl zeropio.github.io
+```
+
+### Flags
+- **-O**: download page.
+- **-o**: specify file name.
+- **-s**: silent request.
+- **-k**: skip the certificate check for https.
+- **-v**: verbose.
+- **-vvv**: extra verbose.
+
