--- a/_posts/notes/tools/2022-05-09-fuzzer.md
+++ b/_posts/notes/tools/2022-05-09-fuzzer.md
@@ -2,9 +2,9 @@
 title: Notes | Fuzzer
 author: Zeropio
 date: 2022-05-09
-categories: [Notes, Web]
+categories: [Notes, Tools]
 tags: [fuzzer]
-permalink: /notes/web/fuzzer
+permalink: /notes/tools/fuzzer
 ---
 
 # Examples
