--- a/_posts/notes/tools/2022-04-24-commands.md
+++ b/_posts/notes/tools/2022-04-24-commands.md
@@ -39,10 +39,22 @@ zero@pio$ curl zeropio.github.io
 ```
 
 ### Flags
-- **-O**: download page.
-- **-o**: specify file name.
-- **-s**: silent request.
-- **-k**: skip the certificate check for https.
-- **-v**: verbose.
-- **-vvv**: extra verbose.
+- **-O**: download page
+- **-o**: specify file name
+- **-s**: silent request
+- **-k**: skip the certificate check for https
+- **-v**: verbose
+- **-vvv**: extra verbose
+- **-I**: only display the headers
+- **-i**: display headers and body
+- **-H**: set request headers
+- **-A**: set User-Agent
+
+> **-I** send a **HEAD** request, while **-i** send a normal request and print the headers.
+{: .prompt-info}
+
+```console
+zero@pio$ curl zeropio.github.io -A 'Mozilla/5.0'
+```
+
 
