--- a/_posts/notes/tools/2022-04-24-commands.md
+++ b/_posts/notes/tools/2022-04-24-commands.md
@@ -57,4 +57,59 @@ zero@pio$ curl zeropio.github.io
 zero@pio$ curl zeropio.github.io -A 'Mozilla/5.0'
 ```
 
+- **-u**: add authentication.
+
+```console
+zero@pio$ curl -u user:password http://zeropio.github.io/login
+zero@pio$ curl http://user:password@zeropio.github.io/login
+```
+
+- **-X**: to specify the method (GET, POST,...)
+- **-d**: send data
+- **-L**: follow redirections
+
+```console
+zero@pio$ curl -X POST -d 'user:password' https://zeropio.github.io/login/
+```
+
+- **-b**: send cookie data 
+
+### API
+
+With API treatment we can use curl also:
+
+```console
+zero@pio$ curl -s https://api.com/city/madrid | jq
+
+  [
+  {
+    "city_name": "Madrid",
+    "country_name": "(ES)"
+  }
+]
+```
+
+We can create entry with:
+
+```console
+zero@pio$ curl -X POST https://api.com/city/ -d '{"city_name":"Zeroland", "country_name":"ZP"}' -H 'Content-Type: application/json'
+```
+
+Modify:
+
+```console
+zero@pio$ curl -X PUT https://api.com/city/zeroland/ -d '{"city_name":"Zeropolis", "country_name":"ZP"}' -H 'Content-Type: application/json'
+```
+
+> We can use PATCH instead of PUT if we want to partially modify some values.
+{: .prompt-info }
+
+And finally, delete:
+
+```console
+zero@pio$ curl -X DELETE https://api.com/city/zeroland
+zero@pio$ curl https://api.com/city/zeroland
+  []
+```
+
 
