--- a/_posts/notes/web/2022-07-11-http.md
+++ b/_posts/notes/web/2022-07-11-http.md
@@ -35,7 +35,7 @@ This are the parameters:
 
 # Flow
 
-![HTTP Flow](/assests/img/notes/HTTP_Flow.png)
+![HTTP Flow](/assets/img/notes/HTTP_Flow.png)
 
 This is the basic flow of a HTTP request. When the browser gets the IP address from the domain sends a GET method to check.
 If the request is correct the response will contain the **status code 200**.
@@ -53,7 +53,7 @@ Due to this, the **HTTPS** (HTTP Secure) was born. Even if an attacker perform a
 
 This is the flow in an HTTPS request:
 
-![HTPPS Flow](/assests/img/notes/HTTPS_Flow.png)
+![HTTPS Flow](/assets/img/notes/HTTPS_Flow.png)
 
 The default port for HTTPS is **443**.
 
@@ -63,7 +63,7 @@ The default port for HTTPS is **443**.
 
 This is a HTTP request:
 
-![HTTP Request](/assests/img/notes/raw_request.png)
+![HTTP Request](/assest/img/notes/raw_request.png)
 
 The structure of a request is the following:
 
@@ -77,7 +77,7 @@ The HTTP headers are a set of values that travels with the request.
 
 # Response
 
-![HTTP Response](/assests/img/notes/raw_response.png)
+![HTTP Response](/assest/img/notes/raw_response.png)
 
 As the request, the response also has headers.
 The response send the HTTP version and the **response code** (200 is OK, which means that the response is correct).
@@ -165,6 +165,7 @@ Entity headers describe the contents. Can be used in both:
 | 5xx  | Problem in the HTTP request                          |
 
 The more common ones are:
+
 | Code                      | Description                                 |
 |:--------------------------|--------------------------------------------:|
 | 200 OK                    | Successful request                          |
@@ -175,4 +176,43 @@ The more common ones are:
 | 500 Internal Server Error | The server cannot process the request       |
 
 For more request: [Mozilla Developer](https://developer.mozilla.org/en-US/docs/Web/HTTP/Status). Some services as [Cloudflare](https://support.cloudflare.com/hc/en-us/articles/115003014432-HTTP-Status-Codes) or [AWS](https://docs.aws.amazon.com/AmazonSimpleDB/latest/DeveloperGuide/APIError.html) have their own.
+
+--- 
+
+# GET
+
+## HTTP Basic Auth 
+
+A basic login would be the one the page ask directly with a pop up alert. Without HTTPS all the data send will be unencrypted, raw.
+With the **curl** command we can login sending the credentials via the command (with the option **-u** or in the URL).
+
+In a basic HTTP auth the header for authentication can be something similar to: `Authorization: Basic YWRtaW46YWRtaW4=`, which are a **base64** encryption of admin:admin.
+In modern authentication the token would be much larger (authorization of type **Bearer**).
+We can use the syntax `curl -H 'Authorization: Basic YWRtaW46YWRtaW4=' http:://zeropio.github.io/login/` to get in.
+
+Nowadays the page create a cookie after the login, so we can mantain the session.
+
+## GET parameters
+
+The GET parameters can be used directly in the URL. For example a search: **https://zeropio.github.io/?search=sql**.
+
+# POST
+
+As differ from GET, POST send the parameters via the body instead of the URL. This has three main benefits:
+- Lack of logging: transfer large size files
+- Less encoding requeriments: the body allow more encoding than the URL
+- More data can be sent: URL has a maximum size
+
+# CRUD API 
+
+An endpoint API is the resource of the web that contact with an API. It can be seen as `https://zeropio.github.io/api.php/country/spain`.
+APIs usually perform in four methods:
+
+| Operation | HTTP Method | Description  |
+|:----------|:------------|-------------:|
+| Create    | POST        | Adds data    |
+| Read      | GET         | Reads data   |
+| Update    | PUT         | Updates data |
+| Delete    | DELETE      | Deletes data |
+
 
