--- a/_posts/notes/tools/2022-04-24-commands.md
+++ b/_posts/notes/tools/2022-04-24-commands.md
@@ -32,6 +32,13 @@ To host a web.
 
 ---
 
+# Encoding and decoding
+
+- **base64**: to decode **-d**
+- **xxd**: hex, to encode **-p**, to decode **-p -r** 
+
+---
+
 # cURL
 Curl can be use to send a basic http request to any URL.
 ```console
